--- a/H1/analyzer.ipynb
+++ b/H1/analyzer.ipynb
@@ -271,7 +271,7 @@
     "plt.vlines(its_eq * delta_t, volume_unit_cell[0],volume_unit_cell[its_eq], color='k', linestyle='--', label='Equilibration Time',alpha=0.5) \n",
     "plt.text((its_eq + 1000) * delta_t, (volume_unit_cell[0] + volume_unit_cell[its_eq])/2, '$t_{eq}$ = 25 ps', ha='left')\n",
     "\n",
-    "plt.xlabel('Time [ps]')\n",
+    "plt.xlabel('Time [ps]');\n",
     "plt.ylabel('Unit Cell Volume [Å$^3$]')"
    ]
   },
