--- a/H2/analyzer.ipynb
+++ b/H2/analyzer.ipynb
@@ -1539,6 +1539,63 @@
    "source": [
     "#### b) Error estimation using block average and autocorrelation"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def get_data_3(task, T):\n",
+    "    filename_corr = f'data/task_{task}/auto_corr_{T}.csv'\n",
+    "    filename_block = f'data/task_{task}/blocking_{T}.csv'\n",
+    "\n",
+    "    N, var_U, var_CV, var_P, var_r = np.genfromtxt(filename_corr, delimiter=',', dtype=np.float64)[1, :]\n",
+    "    auto_corr_data = np.genfromtxt(filename_corr, delimiter=',', dtype=np.float64)[3:, :]\n",
+    "    block_data = np.genfromtxt(filename_block, delimiter=',', dtype=np.float64)[1:, :]\n",
+    "\n",
+    "    s_corr_U = auto_corr_data[:, 0][np.where(auto_corr_data[:, 1] < np.exp(-2))[0][0]]\n",
+    "    s_corr_CV = auto_corr_data[:, 0][np.where(auto_corr_data[:, 2] < np.exp(-2))[0][0]]\n",
+    "    s_corr_P = auto_corr_data[:, 0][np.where(auto_corr_data[:, 3] < np.exp(-2))[0][0]]\n",
+    "    s_corr_r = auto_corr_data[:, 0][np.where(auto_corr_data[:, 4] < np.exp(-2))[0][0]]\n",
+    "\n",
+    "    error_dict = {'U': [s_corr_U, var_U], 'C_V': [s_corr_CV, var_CV], 'P': [s_corr_P, var_P], 'r': [s_corr_r, var_r]}\n",
+    "\n",
+    "    return N, auto_corr_data, block_data, error_dict\n",
+    "\n",
+    "N, autocorr, block, error_dict = get_data_3(3, 800)\n",
+    "\n",
+    "plt.figure()\n",
+    "plt.plot(autocorr[:, 0], autocorr[:, 1], 'tab:blue')\n",
+    "plt.plot(autocorr[:, 0], autocorr[:, 2], 'tab:orange')\n",
+    "plt.plot(autocorr[:, 0], autocorr[:, 3], 'tab:green')\n",
+    "plt.plot(autocorr[:, 0], autocorr[:, 4], 'tab:red')\n",
+    "plt.axhline(np.exp(-2), color='k')\n",
+    "\n",
+    "plt.figure()\n",
+    "plt.plot(block[:, 0], block[:, 1], 'tab:blue')\n",
+    "plt.plot(block[:, 0], block[:, 2], 'tab:orange')\n",
+    "plt.plot(block[:, 0], block[:, 3], 'tab:green')\n",
+    "plt.plot(block[:, 0], block[:, 4], 'tab:red')\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "s_U, var_U = error_dict['U']\n",
+    "s_CV, var_CV = error_dict['C_V']\n",
+    "s_P, var_P = error_dict['P']\n",
+    "s_r, var_r = error_dict['r']\n",
+    "\n",
+    "error_U = np.sqrt(s_U * var_U / N)\n",
+    "error_CV = np.sqrt(s_CV * var_CV / N)\n",
+    "error_P = np.sqrt(s_P * var_P / N)\n",
+    "error_r = np.sqrt(s_r * var_r / N)\n",
+    "print(f'Error in U: {error_U}')\n",
+    "print(f'Error in C_V: {error_CV}')\n",
+    "print(f'Error in P: {error_P}')\n",
+    "print(f'Error in r: {error_r}')"
+   ]
   }
  ],
  "metadata": {
@@ -1557,7 +1614,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
