last push of the compphys course!!

--- a/H3/analyzer.ipynb
+++ b/H3/analyzer.ipynb
@@ -21,11 +21,10 @@
    "outputs": [],
    "source": [
     "\n",
+    "# Importing libraries\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import scipy.constants as K\n",
     "import pandas as pd\n",
-    "from IPython.display import display, Markdown\n",
     "\n",
     "# Latex style\n",
     "plt.style.use('default')\n",
@@ -44,6 +43,32 @@
     "\n",
     "# Functions\n",
     "def read_data(task, ndim, decomp=1, dtau=0.01, walkmen=False, eq=False):\n",
+    "    '''\n",
+    "    Read data from csv files.\n",
+    "\n",
+    "    Args:\n",
+    "        task (int): Task number.\n",
+    "        ndim (int): Number of dimensions.\n",
+    "        decomp (int): Decomposition number.\n",
+    "        dtau (float): Time step.\n",
+    "        walkmen (bool): If True, read walkmen data.\n",
+    "        eq (bool): If True, read equilibrium data.\n",
+    "    \n",
+    "    Returns:\n",
+    "        if task == 1 and eq:\n",
+    "            data_eq (np.ndarray): Equilibrium data.\n",
+    "        elif task == 1 and not eq:\n",
+    "            data_ET (np.ndarray): Non-equilibrium data.\n",
+    "            data_walkmen (np.ndarray): Walkmen data.\n",
+    "        elif task == 2 and walkmen:\n",
+    "            data_ET (np.ndarray): Non-equilibrium data.\n",
+    "            data_extrapol (np.ndarray): Extrapolated data.\n",
+    "            R (list): List of arrays with the R values.\n",
+    "            r12 (np.ndarray): Distance between walkers.\n",
+    "        elif task == 2 and not walkmen:\n",
+    "            data_ET (np.ndarray): Non-equilibrium data.\n",
+    "            data_extrapol (np.ndarray): Extrapolated data.\n",
+    "    '''\n",
     "    if task == 1:\n",
     "        if eq:\n",
     "            path_eq = f'data/task_{task}/{ndim}D/ET_Nwalk_eq_run.csv'\n",
@@ -82,7 +107,8 @@
     "        if walkmen:\n",
     "            path_walkmen = f'data/task_{task}/I_was_walkin_in_morse_decomp_{decomp}_dtau_{dtau:.6f}.csv'\n",
     "            data_walkmen = np.asarray(pd.read_csv(path_walkmen, delimiter=',', on_bad_lines='skip'))\n",
-    "\n",
+    "            \n",
+    "            # Convert to spherical coordinates\n",
     "            r_1 = np.sqrt(data_walkmen[:, 0]**2 + data_walkmen[:, 1]**2 + data_walkmen[:, 2]**2)\n",
     "            theta_1 = np.arccos(data_walkmen[:, 2] / r_1)\n",
     "            phi_1 = np.arctan2(data_walkmen[:, 1], data_walkmen[:, 0])\n",
@@ -90,8 +116,10 @@
     "            theta_2 = np.arccos(data_walkmen[:, 5] / r_2)\n",
     "            phi_2 = np.arctan2(data_walkmen[:, 4], data_walkmen[:, 3])\n",
     "\n",
+    "            # Distance between walkers\n",
     "            r12 = np.sqrt((data_walkmen[:, 0] - data_walkmen[:, 3])**2 + (data_walkmen[:, 1] - data_walkmen[:, 4])**2 + (data_walkmen[:, 2] - data_walkmen[:, 5])**2)\n",
     "\n",
+    "            # Total data\n",
     "            R = [r_1, theta_1, phi_1, r_2, theta_2, phi_2]\n",
     "\n",
     "            return data_ET, data_extrapol, R, r12\n",
@@ -99,8 +127,21 @@
     "            return data_ET, data_extrapol\n",
     "\n",
     "def plot_GSE(ET, tau, dtau, E_0, ndim, task, save=False):\n",
+    "    '''\n",
+    "    Plot the ground-state energy as a function of time.\n",
+    "\n",
+    "    Args:\n",
+    "        ET (np.ndarray): Ground-state energy.\n",
+    "        tau (np.ndarray): Time.\n",
+    "        dtau (float): Time step.\n",
+    "        E_0 (float): Theoretical ground-state energy.\n",
+    "        ndim (int): Number of dimensions.\n",
+    "        task (int): Task number.\n",
+    "        save (bool): If True, save the figure.\n",
+    "    '''\n",
     "    fig, ax = plt.subplots(1, 2, figsize=(17, 8))\n",
     "\n",
+    "    # Plot the energy as a function of time\n",
     "    ax[0].plot(tau, ET, color='tab:red', alpha=0.5)\n",
     "    ax[0].hlines(E_0, 0, len(ET)*dtau, color='tab:red', label=\"$E_0$\"+f\"$\\\\,={E_0:.3f}$\",lw=2.5)\n",
     "    ax[0].hlines(np.mean(ET), 0, len(ET)*dtau, colors='k', label='$\\\\langle \\\\mathcal{E}\\\\rangle$'+f'$\\\\, = {np.mean(ET):.3f}$',lw=2.5,ls = 'dashed')\n",
@@ -110,6 +151,7 @@
     "    # ax[0].set_ylim(-3.2, -2.4)\n",
     "    ax[0].legend(loc='upper center', ncol=2) \n",
     "\n",
+    "    # Plot the histogram of the ground-state energy\n",
     "    ax[1].hist(ET, bins=30, density=True, color='tab:red', alpha=0.5, edgecolor='k')\n",
     "    std = np.std(ET)\n",
     "    ax[1].vlines(x=np.mean(ET)-std, ymin=0, ymax=44, color='k', linestyle='dashed', lw=1.5, alpha=0.5)\n",
@@ -126,14 +168,26 @@
     "    # ax[1].text(-2.912, -11, '(b)')\n",
     "    plt.tight_layout()\n",
     "\n",
+    "    # Save figure\n",
     "    if save:\n",
     "        save_fig(plt, 'E_T', task, ndim)\n",
     "\n",
     "    plt.show()\n",
     "\n",
     "def plot_walkmen(tau, walk, ndim=1, task=1, save=False):\n",
+    "    '''\n",
+    "    Plot the number of walkers as a function of time.\n",
+    "\n",
+    "    Args:\n",
+    "        tau (np.ndarray): Time.\n",
+    "        walk (np.ndarray): Number of walkers.\n",
+    "        ndim (int): Number of dimensions.\n",
+    "        task (int): Task number.\n",
+    "        save (bool): If True, save the figure.\n",
+    "    '''\n",
     "    fig, ax = plt.subplots(1, 2, figsize=(17, 8))\n",
     "\n",
+    "    # Plot the number of walkers as a function of time\n",
     "    ax[0].plot(tau, walk, color='tab:green', alpha=0.5)\n",
     "    ax[0].hlines(np.mean(walk), 0, np.max(tau), colors='k', label='$\\\\langle N_{walkers}\\\\rangle$'+f'$\\\\,= {np.mean(walk):.0f}$',linestyle='dashed',lw=2.5)\n",
     "    ax[0].set_xlabel('Time $\\\\tau$ [a.u.]')\n",
@@ -141,6 +195,7 @@
     "    ax[0].set_ylim(925, 1100)\n",
     "    ax[0].legend(loc='upper left')\n",
     "\n",
+    "    # Plot the histogram of the number of walkers\n",
     "    ax[1].hist(walk, bins=30, density=True, color='tab:green', alpha=0.5, edgecolor='k')\n",
     "    ax[1].set_xlabel('Number of walkers')\n",
     "    ax[1].set_ylabel('Probability density')\n",
@@ -156,21 +211,33 @@
     "    ax[1].text(997, -0.006, '(b)')\n",
     "    plt.tight_layout()\n",
     "\n",
+    "    # Save figure\n",
     "    if save:\n",
     "        save_fig(plt, 'N_walkers', task, ndim)\n",
     "\n",
     "    plt.show()\n",
     "\n",
     "def plot_Rhist(R, decomp, save=False):\n",
+    "    '''\n",
+    "    Plot the histogram of the walkers' positions.\n",
+    "\n",
+    "    Args:\n",
+    "        R (list): List of arrays with the R values.\n",
+    "        decomp (int): Decomposition number.\n",
+    "        save (bool): If True, save the figure.\n",
+    "    '''\n",
     "    fig, axs = plt.subplots(2, 3, figsize=(18, 12), sharex='col')\n",
+    "    # Plot the histogram of the walkers' positions for the first electron\n",
     "    axs[0][0].hist(R[0], bins=50, density=True, color='tab:blue', alpha=0.5, edgecolor='k', label='$r_1$')\n",
     "    axs[0][1].hist(R[1], bins=50, density=True, color='tab:green', alpha=0.5, edgecolor='k', label='$\\\\theta_1$')\n",
     "    axs[0][2].hist(R[2], bins=50, density=True, color='tab:red', alpha=0.5, edgecolor='k', label='$\\\\phi_1$')\n",
     "\n",
+    "    # Plot the histogram of the walkers' positions for the second electron\n",
     "    axs[1][0].hist(R[3], bins=50, density=True, color='tab:blue', alpha=0.5, edgecolor='k', label='$r_2$')\n",
     "    axs[1][1].hist(R[4], bins=50, density=True, color='tab:green', alpha=0.5, edgecolor='k', label='$\\\\theta_2$')\n",
     "    axs[1][2].hist(R[5], bins=50, density=True, color='tab:red', alpha=0.5, edgecolor='k', label='$\\\\phi_2$')\n",
     "\n",
+    "    # Set labels and ticks\n",
     "    for i in range(2):\n",
     "        axs[i][0].set_xlabel(f'$r_{i+1}$ [a.u.]')\n",
     "        axs[i][0].text(1.4, 0.8, '\\\\textbf{{a)}}' if i == 0 else '\\\\textbf{{d)}}')\n",
@@ -191,12 +258,23 @@
     "        ax.set_ylabel('Probability density')\n",
     "\n",
     "    plt.tight_layout()\n",
+    "\n",
+    "    # Save figure\n",
     "    if save:\n",
     "        save_fig(plt, f'R_hist_{decomp}', 2, 6)\n",
     "\n",
     "    plt.show()\n",
     "\n",
     "def save_fig(fig, name, task, ndim):\n",
+    "    '''\n",
+    "    Save figure as pdf.\n",
+    "\n",
+    "    Args:\n",
+    "        fig (plt.figure): Figure to save.\n",
+    "        name (str): Name of the figure.\n",
+    "        task (int): Task number.\n",
+    "        ndim (int): Number of dimensions.\n",
+    "    '''\n",
     "    fig.savefig(f'figs/task_{task}/{ndim}D/{name}.pdf', bbox_inches='tight')\n"
    ]
   },
@@ -235,10 +313,12 @@
    ],
    "source": [
     "\n",
+    "# Plot the Morse potential and the wavefunction\n",
     "x = np.linspace(-2.5, 10, 10000)\n",
     "psi = np.exp(-np.exp(-x) - x/2) / np.sqrt(np.pi)\n",
     "Morse = 0.5 * (1 - np.exp(-x)) ** 2\n",
     "\n",
+    "# Morse potential\n",
     "plt.figure(figsize=(8, 5))\n",
     "plt.plot(x, Morse, label='Morse potential $V(x)$', color='k', lw=2.5)\n",
     "plt.xlabel('$x$ [a.u.]')\n",
@@ -251,6 +331,7 @@
     "\n",
     "plt.figure(figsize=(8, 5))\n",
     "\n",
+    "# Read walker data\n",
     "_, walker_pos = read_data(1, 1)\n",
     "bin_size = 150\n",
     "counts, bins = np.histogram(walker_pos, bins=bin_size)\n",
@@ -312,11 +393,13 @@
    ],
    "source": [
     "\n",
+    "# Read data\n",
     "ET_data, _ = read_data(1, 1)\n",
     "ET_avg, walk, mort_rate, ET = ET_data.T\n",
     "tau = np.linspace(0, len(ET) * 0.02, len(ET))\n",
     "save = False\n",
     "\n",
+    "# Plot the ground-state energy and the number of walkers\n",
     "plot_GSE(ET, tau, 0.02, 3/8, 1, 1, save)\n",
     "\n",
     "plot_walkmen(tau, walk, save)\n",
@@ -328,10 +411,13 @@
     "# plt.hlines(np.mean(mort_rate), 0, np.max(tau),colors='k', label='Mortality rate'+f' = {np.mean(mort_rate):.1f}\\\\%')\n",
     "# plt.legend()\n",
     "\n",
+    "# Read data\n",
     "ET_avg_eq, walk_eq, mort_rate_eq, ET_eq = read_data(1, 1, eq=True)[:, :].T\n",
     "ET_avg_eq = np.insert(ET_avg_eq, 0, 0.5)\n",
     "walk_eq = np.insert(walk_eq, 0, 200)\n",
     "ET_eq = np.insert(ET_eq, 0, 0.5)\n",
+    "\n",
+    "# Plot the ground-state energy and the number of walkers in equilibrium\n",
     "fig, ax = plt.subplots(1, 2, figsize=(17, 8))\n",
     "ax[0].plot(tau[:len(ET_eq)], ET_eq,color='tab:red', alpha=0.4, lw=2.5, label='$\\\\mathcal{E}_i$')\n",
     "ax[0].plot(tau[:len(ET_avg_eq)], ET_avg_eq, color='tab:red', alpha=1, lw=2.5, label='$E_\\\\textsf{T}^{(i)}$')\n",
@@ -396,6 +482,7 @@
    ],
    "source": [
     "\n",
+    "# Read data\n",
     "data_ET, _ = read_data(1, 6)\n",
     "ET_avg, walk, mort_rate, ET = data_ET.T\n",
     "dtau = 0.01\n",
@@ -403,6 +490,7 @@
     "E_0_He = -2.903\n",
     "save = False\n",
     "\n",
+    "# Plot the ground-state energy and the number of walkers\n",
     "plot_GSE(ET, tau, dtau, E_0_He, ndim=6, task=1, save=save)\n",
     "plot_walkmen(tau, walk, ndim=6, task=1, save=save)\n"
    ]
@@ -411,7 +499,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Task 3 - DMC with Importance Sampling"
+    "### Task 3 & 4 - DMC with Importance Sampling"
    ]
   },
   {
@@ -465,18 +553,22 @@
     "dtau = 0.1\n",
     "E_0_He = -2.903\n",
     "\n",
+    "# Read data for the first decomposition\n",
     "data_ET_1, data_extrapol_1 = read_data(2, 1, decomp=1, dtau=dtau)\n",
     "ET_avg_1, walk_1, mort_rate_1, ET_1 = data_ET_1.T\n",
     "\n",
+    "# Read data for the second decomposition\n",
     "data_ET_2, data_extrapol_2 = read_data(2, 1, decomp=2, dtau=dtau)\n",
     "ET_avg_2, walk_2, mort_rate_2, ET_2 = data_ET_2.T\n",
     "\n",
+    "# Plot the ground-state energy and the number of walkers for the first decomposition\n",
     "tau = np.linspace(0, len(ET_1) * dtau, len(ET_1))\n",
     "plot_GSE(ET_1, tau, dtau, E_0_He, ndim=6, task=2, save=False)\n",
     "plot_walkmen(tau, walk_1, ndim=6, task=2, save=False)\n",
     "\n",
+    "# Plot the ground-state energy and the number of walkers for the second decomposition\n",
     "plot_GSE(ET_2, tau, dtau, E_0_He, ndim=6, task=2, save=False)\n",
-    "plot_walkmen(tau, walk_2, ndim=6, task=2, save=False)"
+    "plot_walkmen(tau, walk_2, ndim=6, task=2, save=False)\n"
    ]
   },
   {
@@ -521,6 +613,7 @@
     "axs[1].plot(data_extrapol_2[:,0], data_extrapol_2[:,1], 's', label='Data points', color='k', markersize=10)\n",
     "axs[1].plot(dtaus, np.polyval(fit_2, dtaus), label='Quadratic fit', color='tab:red', lw=2.5)\n",
     "\n",
+    "# Set labels and ticks\n",
     "for ax in axs:\n",
     "    ax.set_xlabel('$\\\\Delta\\\\tau$ [a.u.]')\n",
     "    ax.set_ylabel('Ground-state energy $E_\\\\textsf{T}$ [a.u.]')\n",
@@ -547,6 +640,7 @@
    "outputs": [],
    "source": [
     "\n",
+    "# Read the walker data for the first and second decomposition\n",
     "_, _, R_1, r12_1 = read_data(2, 6, decomp=1, dtau=dtau, walkmen=True)\n",
     "_, _, R_2, r12_2 = read_data(2, 6, decomp=2, dtau=dtau, walkmen=True)\n"
    ]
@@ -589,10 +683,12 @@
    ],
    "source": [
     "\n",
+    "# Plot the histogram of the distance between walkers for the first and second decomposition\n",
     "fig, axs = plt.subplots(1, 2, figsize=(12, 7))\n",
     "axs[0].hist(r12_1, bins=50, density=True, color='tab:orange', alpha=0.5, edgecolor='k')\n",
     "axs[1].hist(r12_2, bins=50, density=True, color='tab:orange', alpha=0.5, edgecolor='k')\n",
     "\n",
+    "# Set labels and ticks\n",
     "for ax in axs:\n",
     "    ax.set_xticks([2.5, 5])\n",
     "    ax.set_xlim(0, 6)\n",
@@ -605,6 +701,7 @@
     "axs[1].text(2.7, -0.175, '(b)')\n",
     "# save_fig(plt, 'r12', 2, 6)\n",
     "\n",
+    "# Plot the histogram of the walkers' positions\n",
     "plot_Rhist(R_1, 1, save=False)\n",
     "plot_Rhist(R_2, 2, save=False)\n"
    ]
